[package]
name = "git-contrib-stats"
version = "0.4.1"
edition = "2021"
description = "CLI tool to generate git commit statistics per contributor"
license = "MIT"
repository = "https://github.com/CharlonTank/git-contrib-stats"
keywords = ["git", "statistics", "cli", "commits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
